fix error(visibility of forms)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -321,10 +321,10 @@ form{
     border-radius: 10px;
 }
 
-/* #task-form,
+#task-form,
 #project-form{
-    visibility: hidden;
-} */
+    display: none;
+}
 
 form > h1{
     color: var(--dark-gray);
